{
    "name": "PlayerControls",
    "maps": [
        {
            "name": "MainGame",
            "id": "95bec645-c1e2-46f9-ac02-5a7b770903b0",
            "actions": [
                {
                    "name": "LeftClick",
                    "type": "Button",
                    "id": "32782454-6598-4a5f-8ae0-7232ee0ce479",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                },
                {
                    "name": "RightClick",
                    "type": "Button",
                    "id": "df16b46f-47f7-47af-aab6-b4d9c17f2f31",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                }
            ],
            "bindings": [
                {
                    "name": "",
                    "id": "ad469816-f0d7-49ef-843d-3038b04533fc",
                    "path": "<Mouse>/leftButton",
                    "interactions": "",
                    "processors": "",
                    "groups": "PointNClick",
                    "action": "LeftClick",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "b61c567b-d8de-4d4b-9302-d068f794ac25",
                    "path": "<Mouse>/rightButton",
                    "interactions": "",
                    "processors": "",
                    "groups": "PointNClick",
                    "action": "RightClick",
                    "isComposite": false,
                    "isPartOfComposite": false
                }
            ]
        }
    ],
    "controlSchemes": [
        {
            "name": "PointNClick",
            "bindingGroup": "PointNClick",
            "devices": []
        }
    ]
}